[tool.poetry]
name = "mobility-corridors-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
urllib3 = "^1.26.9"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
dask = "^2022.5.0"
SQLAlchemy = "^1.4.36"
geopandas = "^0.10.2"
keplergl = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
